<resources>
    <string name="app_name">sohamfit</string>
    <string name="action_settings">Opciones</string>
    <string name="title_activity_filters">Filtros</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_video_player"></string>
    <string name="title_activity_dispatch">DispatchActivity</string>

    <string name="facebook_app_id">992585987472820</string>


    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_facebook">Ingresar/Resitrarte con Facebook</string>
    <string name="login_error_message">Por favor, introduzca un Usuario y una Contraseña válidas.</string>
    <string name="login_error_tittle">Oops!</string>
    <string name="login_error_credentials">Email/password inválidos</string>
    <string name="logout">Cerrar sesión</string>

    <!-- Register -->
    <string name="prompt_first_name">Nombre</string>
    <string name="prompt_last_name">Apellido</string>
    <string name="action_register">Registrate</string>
    <string name="sign_up_error_message_data">Por favor, completa todo los campos.</string>
    <string name="sign_up_error_message">Hubo un error, vuelve a intentarlo</string>
    <string name="sign_up_error_tittle">Oops!</string>

    <!-- Videos-->
    <string name="no_results">No hay resultados, intenta otro filtro.</string>
    <string name="video_date_text">Publicado el</string>
    <string name="level_tag">Nivel:</string>

    <!-- Filter -->
    <string name="filter_button">Filtrar</string>
    <string name="filter_clear_button">Limpiar</string>
    <string name="search_video_title">Búsqueda</string>
    <string name="search_hint">Buscar</string>
    <string name="order_byl_title">Ordenar por</string>
    <string name="sort_by_alphabetically">Alfabéticamente</string>
    <string name="sort_by_date">Fecha</string>


    <!-- Spinner video type -->
    <string name="spinner_type_video_title">Tipo de Video</string>
    <string-array name="video_type_array">
        <item>Todos</item>
        <item>Clases</item>
        <item>Secuencias cortas</item>
        <item>Posturas</item>
        <item>Correcciones</item>
    </string-array>

    <!-- Spinner video type -->
    <string name="spinner_level_video_title">Nivel</string>
    <string-array name="video_level_array">
        <item>Todos</item>
        <item>Básico</item>
        <item>Intermedio</item>
    </string-array>


    <!-- Error dialogs -->
    <string name="network_unavailable_tittle">Sin internet!!</string>
    <string name="network_unavailable_message">Lo sentimos, en estos momentos no tienes conexión a internet, intenta nuevamente más tarde.</string>
    <string name="error_updating_user_info">Lo sentimos mucho, hubo un error, intente de nuevo.</string>
    <string name="title_activity_register">Register</string>
    <string name="slow_service">Servico lento...</string>
    <!-- End Error dialogs -->


</resources>


