<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="300dp"
        android:minHeight="400dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.sohamfit.sohamfitapp.Filters"
        tools:showIn="@layout/activity_filters">

        <TextView
            android:id="@+id/videoTypeTitle"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spinner_type_video_title"
            android:textSize="15sp"
            android:background="@color/colorBackBlack"
            android:alpha="100"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:entries="@array/video_type_array"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/videoTypeTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <TextView
            android:id="@+id/videoLevelTitle"
            android:layout_marginTop="30dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spinner_level_video_title"
            android:textSize="15sp"
            android:background="@color/colorBackBlack"
            android:alpha="100"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type"/>

        <Spinner
            android:id="@+id/spinner_level"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:entries="@array/video_level_array"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/videoLevelTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <TextView
            android:id="@+id/sortByTitle"
            android:layout_marginTop="30dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_byl_title"
            android:textSize="15sp"
            android:background="@color/colorBackBlack"
            android:alpha="100"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_level"/>


        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_alphabetically"
            android:id="@+id/sortByAlphabetically"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortByTitle"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorBackBlack"
            app:buttonTint="@color/colorPrimaryDark"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_date"
            android:id="@+id/sortByDate"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="@+id/sortByAlphabetically"
            app:layout_constraintTop_toBottomOf="@+id/sortByAlphabetically"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorBackBlack"
            app:buttonTint="@color/colorPrimaryDark" />




        <Button
            android:id="@+id/button_filter"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:text="@string/filter_button"
            android:background="@drawable/soham_button"
            android:textColor="@color/colorWhite"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
